lots of styling, added add to clipboard

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  background-color: black;
+  background-image: url('https://thumbs.dreamstime.com/b/music-party-seamless-background-pattern-icons-sketch-style-64533419.jpg');
+  background-repeat: repeat
 }
 
 .App-logo {
@@ -23,6 +26,10 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
