fixed html body bug, changed signup and log in to pages rather than modals

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   background-image: url('https://thumbs.dreamstime.com/b/music-party-seamless-background-pattern-icons-sketch-style-64533419.jpg');
   background-repeat: repeat-vertical;
   background-attachment: fixed;
+  min-height: 100vh
 }
 
 .App-logo {
