--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-image: url('https://thumbs.dreamstime.com/b/music-party-seamless-background-pattern-icons-sketch-style-64533419.jpg');
+  background-image: url('https://i.imgur.com/zVpRPR7.png');
   background-repeat: repeat-vertical;
   background-attachment: fixed;
   min-height: 100vh
