updating for re-deploy

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-image: url('https://i.imgur.com/zVpRPR7.png');
+  background-image: url('https://img.freepik.com/premium-vector/geometric-pattern-seamless-graphic-pattern-80s-90s-trendy-styles-black-background-black-white-pattern-with-different-shapes-objects-wrapping-paper-background_136321-1180.jpg');
   background-repeat: repeat-vertical;
   background-attachment: fixed;
   min-height: 100vh
